[package]

name = "easigrow"
version = "0.0.0"
description = "A fatigue crack growth matching program"
license = "MIT"
authors = ["Paul White @needsglasses"]
readme = "README.md"
documentation = "README"
publish = false

[[bin]]
name = "easigrow"
path = "src/main.rs"

[lib]
name = "fatigue"
path = "src/lib.rs"

[dependencies]
log = "0.4"
clap = "2.32.0"
rayon = "1.0.3"
svg = "0.5.12"
clippy = {version = "*", optional = true}
GSL = {version = "*", optional = true}
bspline = "0.2.2"

[dev-dependencies]
tempdir = "0.3"

[features]
default = []
v2 = ["GSL/v2"]
